[gd_scene load_steps=13 format=2]

[ext_resource path="res://Title Screen.gd" type="Script" id=1]
[ext_resource path="res://Assets/UI/option button pressed-Sheet.png" type="Texture" id=2]
[ext_resource path="res://Assets/UI/Option Button-Sheet.png" type="Texture" id=3]
[ext_resource path="res://Assets/UI/title art-Sheet.png" type="Texture" id=4]
[ext_resource path="res://Assets/UI/exit button pressed-Sheet.png" type="Texture" id=5]
[ext_resource path="res://Assets/UI/exit button-Sheet.png" type="Texture" id=6]
[ext_resource path="res://Assets/UI/New Game Button pressed-Sheet.png" type="Texture" id=7]
[ext_resource path="res://Assets/UI/New Game Button-Sheet.png" type="Texture" id=8]
[ext_resource path="res://Assets/UI/new game button hover-Sheet.png" type="Texture" id=9]
[ext_resource path="res://Assets/UI/exit button hover-Sheet.png" type="Texture" id=10]
[ext_resource path="res://Assets/UI/option button hover-Sheet.png" type="Texture" id=11]
[ext_resource path="res://Assets/Music and Sounds/MainBackgroundMusic.wav" type="AudioStream" id=12]

[node name="Title Screen" type="Node"]
script = ExtResource( 1 )

[node name="Background Art" type="Sprite" parent="."]
texture = ExtResource( 4 )
centered = false

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 0
custom_constants/margin_top = 140
custom_constants/margin_left = 0
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 200.0
margin_top = 140.0
margin_right = 280.0
margin_bottom = 240.0
size_flags_horizontal = 4
custom_constants/separation = 0

[node name="NewGame" type="TextureButton" parent="MarginContainer/VBoxContainer"]
margin_right = 80.0
margin_bottom = 32.0
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 7 )
texture_hover = ExtResource( 9 )

[node name="Options" type="TextureButton" parent="MarginContainer/VBoxContainer"]
margin_top = 32.0
margin_right = 80.0
margin_bottom = 64.0
texture_normal = ExtResource( 3 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 11 )

[node name="Exit" type="TextureButton" parent="MarginContainer/VBoxContainer"]
margin_top = 64.0
margin_right = 80.0
margin_bottom = 96.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 10 )

[node name="Background Music" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 12 )
autoplay = true
[connection signal="pressed" from="MarginContainer/VBoxContainer/NewGame" to="." method="_on_NewGame_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
